[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scripts/Player2.gd" type="Script" id=1]
[ext_resource path="res://Characters/Char.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/HPBar.png" type="Texture" id=3]
[ext_resource path="res://textures/HPBarOutline.png" type="Texture" id=4]
[ext_resource path="res://textures/ManaBarOutline.png" type="Texture" id=5]
[ext_resource path="res://textures/1234.png" type="Texture" id=6]
[ext_resource path="res://textures/123.png" type="Texture" id=7]
[ext_resource path="res://Korean_Calligraphy.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://textures/blobshadow.png" type="Texture" id=9]
[ext_resource path="res://textures/Range2.png" type="Texture" id=10]

[sub_resource type="CapsuleShape" id=1]
radius = 0.6
height = 1.5

[sub_resource type="CylinderShape" id=2]
radius = 8.0
height = 3.17166

[sub_resource type="SpatialMaterial" id=3]
render_priority = 1
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
albedo_texture = ExtResource( 10 )

[sub_resource type="QuadMesh" id=4]
size = Vector2( 16, 16 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true

[sub_resource type="CylinderMesh" id=6]
top_radius = 6.0
bottom_radius = 6.0
height = 0.1

[sub_resource type="DynamicFont" id=7]
size = 11
font_data = ExtResource( 8 )

[sub_resource type="QuadMesh" id=8]
size = Vector2( 4, 3.2 )

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=10]
resource_local_to_scene = true
render_priority = 2
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_texture = SubResource( 9 )

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
albedo_color = Color( 1, 1, 1, 0.54902 )
albedo_texture = ExtResource( 9 )

[sub_resource type="QuadMesh" id=12]
size = Vector2( 2.5, 2.5 )

[sub_resource type="CylinderShape" id=13]
radius = 1.3

[sub_resource type="BoxShape" id=14]
extents = Vector3( 0.631291, 0.594865, 0.55645 )

[node name="Player" type="KinematicBody" groups=["PlayerA", "TeamA"]]
collision_layer = 27
collision_mask = 27
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.631905, -0.129245 )
shape = SubResource( 1 )

[node name="Char" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.8, 0, -7.00946e-07, 0, 1.8, 0, 7.00946e-07, 0, -1.8, 0, 0, 0 )

[node name="AnimationTree" parent="Char" index="2"]
parameters/TimeScale/scale = 3.0

[node name="Skill1" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Skill2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Skill3" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Skill1Area" type="Area" parent="."]
collision_layer = 512
collision_mask = 512
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="Skill1Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15542, 0 )
shape = SubResource( 2 )

[node name="Skill1Range" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.602497, 0 )
visible = false
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="MapIcon" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00547791, 0.674252, -0.0370255 )
layers = 2
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = null

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 100, 100 )
transparent_bg = true
render_target_v_flip = true

[node name="HPBar" type="TextureProgress" parent="Viewport"]
margin_left = 18.0
margin_top = 5.0
margin_right = 98.0
margin_bottom = 19.0
rect_min_size = Vector2( 80, 14 )
value = 100.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.211765, 0.211765, 0.211765, 1 )
tint_progress = Color( 0.0313726, 0.858824, 0.0823529, 1 )
nine_patch_stretch = true

[node name="ManaBar" type="TextureProgress" parent="Viewport"]
margin_left = 18.0
margin_top = 17.0
margin_right = 98.0
margin_bottom = 25.0
rect_min_size = Vector2( 80, 8 )
value = 100.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.211765, 0.211765, 0.211765, 1 )
tint_progress = Color( 0.0313726, 0.470588, 0.819608, 1 )
nine_patch_stretch = true

[node name="ExpBar" type="TextureProgress" parent="Viewport"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 0.5
margin_top = 1.0
margin_right = 14.5
margin_bottom = 15.0
rect_min_size = Vector2( 64, 64 )
rect_scale = Vector2( 0.33, 0.43 )
step = 0.1
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 6 )
fill_mode = 4
tint_under = Color( 0.313726, 0.313726, 0.313726, 1 )
tint_progress = Color( 0.721569, 0.968627, 1, 1 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="Viewport"]
margin_left = 0.95
margin_top = 7.3
margin_right = 20.95
margin_bottom = 27.3
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 7 )
text = "1"
align = 1
valign = 1
autowrap = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.251515, 3.20695, 0.52329 )
cast_shadow = 0
mesh = SubResource( 8 )
material/0 = SubResource( 10 )

[node name="Effects" type="Position3D" parent="."]

[node name="Shadow" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.757267, -0.143196 )
material_override = SubResource( 11 )
cast_shadow = 0
mesh = SubResource( 12 )
material/0 = null

[node name="Attack" type="Area" parent="."]
collision_layer = 18
collision_mask = 18

[node name="CollisionShape" type="CollisionShape" parent="Attack"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.192274, 0.690533, -0.323294 )
shape = SubResource( 13 )
disabled = true

[node name="Hit" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.58669, -1.98021 )
collision_layer = 18
collision_mask = 2147483666

[node name="CollisionShape" type="CollisionShape" parent="Hit"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.331337, 0.354769 )
shape = SubResource( 14 )

[connection signal="timeout" from="Skill1" to="." method="_on_Skill1_timeout"]
[connection signal="timeout" from="Skill2" to="." method="_on_Skill2_timeout"]
[connection signal="timeout" from="Skill3" to="." method="_on_Skill3_timeout"]
[connection signal="input_event" from="Skill1Area" to="." method="_on_Skill1Area_input_event"]
[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_Attack_body_exited"]
[connection signal="body_entered" from="Hit" to="." method="_on_Hit_body_entered"]

[editable path="Char"]
